--- a/.github/workflows/katalon-tests.yml
+++ b/.github/workflows/katalon-tests.yml
@@ -192,7 +192,8 @@ jobs:
         Write-Host "=========================================="
         
         # Set environment variables trước khi chạy (đảm bảo headless)
-        $env:JAVA_OPTS = '-Djava.awt.headless=true -Dorg.eclipse.swt.browser.DefaultType=none -Dkatalon.webview.enabled=false -Dorg.eclipse.swt.browser.chromium.enabled=false -Declipse.e4.inject.javax.disabled=true'
+        # QUAN TRỌNG: Thêm system property để Test Listener biết đang chạy headless
+        $env:JAVA_OPTS = '-Djava.awt.headless=true -Dkatalon.browser.type=Chrome (headless) -Dorg.eclipse.swt.browser.DefaultType=none -Dkatalon.webview.enabled=false -Dorg.eclipse.swt.browser.chromium.enabled=false -Declipse.e4.inject.javax.disabled=true'
         $env:KATALON_OPTS = '-noSplash -consoleLog'
         
         Write-Host "Environment variables set:"
